--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="utf-8" />
@@ -14,4 +14,18 @@
 <div id="app"></div>
 <script type="text/javascript" src="js/bundle.js"></script>
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Hello React!</title>
+    </head>
+    <body>
+        <div id="example"></div>
+
+        <!-- Main -->
+        <script src="./build/bundle.js"></script>
+    </body>
 </html>
