Поправлен баг при скроле

--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,7 @@
         <title>Hello React!</title>
     </head>
     <body>
-        <div id="example"></div>
+        <div className="app" id="example"></div>
 
         <!-- Main -->
         <script src="./build/bundle.js"></script>
